--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "kfp-pipeline-spec" %}
-{% set version = "0.1.7" %}
+{% set version = "0.1.9" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   - url: https://pypi.io/packages/py3/{{ name[0] }}/{{ name }}/kfp_pipeline_spec-{{ version }}-py3-none-any.whl
-    sha256: 5e0d62681bf0567b2700b826a46c842c1e23a4b2ed4979f40a629c25cce4b960
+    sha256: ef449108aa3c1bad24775ab592e313fedbece3d61b9afe9549316c5e53e52239
 build:
   number: 0
   noarch: python
@@ -21,6 +21,7 @@ requirements:
   run:
     - python >=3.5.3
     - protobuf >=3.13.0,<4
+    - googleapis-common-protos
 
 test:
   imports:
